<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/incheslabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="73dp"
        android:gravity="center"
        android:labelFor="@id/editheightinches"
        android:text="@string/incheslabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editheightinches"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/feetlabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:labelFor="@id/editheightfeet"
        android:text="@string/feetlabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:typeface="sans"
        app:layout_constraintStart_toEndOf="@+id/editheightfeet"
        app:layout_constraintTop_toBottomOf="@+id/settingslabel" />

    <TextView
        android:id="@+id/settingslabel"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="136dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/settingslabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/homebutton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/heightlabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:text="@string/heightlabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homebutton" />

    <TextView
        android:id="@+id/weightlabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text="@string/weightlabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:typeface="sans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heightlabel" />

    <TextView
        android:id="@+id/selectgoallabel"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="74dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/selectgoallabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:typeface="sans"
        app:layout_constraintEnd_toStartOf="@+id/goalradios"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sexradios" />

    <TextView
        android:id="@+id/workoutdayslabel"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="104dp"
        android:gravity="center"
        android:text="@string/workoutdayslabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalradios" />

    <TextView
        android:id="@+id/poundslabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:labelFor="@id/editweight"
        android:text="@string/poundslabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editweight"
        app:layout_constraintTop_toBottomOf="@+id/incheslabel" />

    <ImageButton
        android:id="@+id/homebutton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?attr/colorSecondaryVariant"
        android:contentDescription="@string/homebuttondescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_home_24" />

    <EditText
        android:id="@+id/editweight"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="16dp"
        android:background="?attr/editTextBackground"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:importantForAccessibility="no"
        android:inputType="number"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/poundslabel"
        app:layout_constraintStart_toEndOf="@+id/weightlabel"
        app:layout_constraintTop_toBottomOf="@+id/editheightinches"
        tools:ignore="DuplicateSpeakableTextCheck"
        tools:text="165"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editheightinches"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="70dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:background="?attr/editTextBackground"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:gravity="clip_vertical|end"
        android:importantForAccessibility="no"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textAllCaps="false"
        android:textColor="#FFFDFD"
        app:layout_constraintStart_toEndOf="@+id/feetlabel"
        app:layout_constraintTop_toBottomOf="@+id/settingslabel"
        tools:ignore="DuplicateSpeakableTextCheck"
        tools:text="260" />

    <EditText
        android:id="@+id/editheightfeet"
        style="@style/Widget.AppCompat.AutoCompleteTextView"
        android:layout_width="57dp"
        android:layout_height="48dp"
        android:layout_marginStart="71dp"
        android:layout_marginTop="60dp"
        android:background="?attr/editTextBackground"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:gravity="clip_vertical|end"
        android:importantForAccessibility="no"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/feetlabel"
        app:layout_constraintStart_toEndOf="@+id/heightlabel"
        app:layout_constraintTop_toBottomOf="@+id/settingslabel"
        tools:ignore="DuplicateSpeakableTextCheck"
        tools:text="6" />

    <RadioGroup
        android:id="@+id/sexradios"
        android:layout_width="210dp"
        android:layout_height="48dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editweight">

        <RadioButton
            android:id="@+id/maleradio"
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:checked="true"
            android:gravity="center"
            android:textColor="#FFFFFF"
            tools:text="Male" />

        <RadioButton
            android:id="@+id/femalradio"
            android:layout_width="105dp"
            android:layout_height="match_parent"
            android:checked="false"
            android:gravity="center"
            android:textColor="#FFFFFF"
            tools:text="Female" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/goalradios"
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_marginStart="208dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="59dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sexradios">

        <RadioButton
            android:id="@+id/fatlossradio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fatlossradio"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/musclebuildingradio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/musclebuildingradio"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/strengthradio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strengthradio"
            android:textColor="#FFFFFF" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/tuesdaybox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tuesdayradio"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/wednesdaybox"
        app:layout_constraintTop_toBottomOf="@+id/workoutdayslabel" />

    <CheckBox
        android:id="@+id/wednesdaybox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wednesdayradio"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/thursdaybox"
        app:layout_constraintTop_toBottomOf="@+id/workoutdayslabel" />

    <CheckBox
        android:id="@+id/thursdaybox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thursdayradio"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/fridaybox"
        app:layout_constraintTop_toBottomOf="@+id/workoutdayslabel" />

    <CheckBox
        android:id="@+id/fridaybox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fridayradio"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/saturdaybox"
        app:layout_constraintTop_toBottomOf="@+id/workoutdayslabel" />

    <CheckBox
        android:id="@+id/saturdaybox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saturdayradio"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/sundaybox"
        app:layout_constraintTop_toBottomOf="@+id/workoutdayslabel" />

    <CheckBox
        android:id="@+id/sundaybox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="37dp"
        android:text="@string/sundayradio"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workoutdayslabel" />

    <CheckBox
        android:id="@+id/mondaybox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:text="@string/mondayradio"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/tuesdaybox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/workoutdayslabel" />

</androidx.constraintlayout.widget.ConstraintLayout>