<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/nextworkoutbutton"
        android:layout_width="215dp"
        android:layout_height="88dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="98dp"
        android:text="@string/nextworkoutbutton"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nextworkoutlabel"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/nextworkoutlabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:text="@string/nextworkoutlabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#FFFFFF"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todaysworkoutbutton" />

    <TextView
        android:id="@+id/dateday"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/dateday"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/settingsbutton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dateyear"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:gravity="center"
        android:text="@string/dateyear"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/dateday"
        app:layout_constraintTop_toBottomOf="@+id/datedate" />

    <TextView
        android:id="@+id/datedate"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/datedate"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/dateday"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/todaysworkoutlabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:gravity="center"
        android:text="@string/currentworkoutlabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#FFFFFF"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateday" />

    <Button
        android:id="@+id/todaysworkoutbutton"
        android:layout_width="215dp"
        android:layout_height="88dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="98dp"
        android:text="@string/currentworkoutbutton"

        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todaysworkoutlabel"
        tools:ignore="TextContrastCheck" />

    <ImageButton
        android:id="@+id/settingsbutton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?attr/colorSecondaryVariant"
        android:contentDescription="@string/settingsbuttondescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings_white" />
</androidx.constraintlayout.widget.ConstraintLayout>